<resources>
    <string name="app_name">Trivia App</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="q1_a_option">A) Sachin Tendulkar</string>
    <string name="q1_b_option">B) Virat Kolli</string>
    <string name="q1_c_option">C) Adam Gilchirst</string>
    <string name="q1_d_option">D) Jacques Kallis</string>
    <string name="quiz_question1">1.Who is the best cricketer in the world?</string>
    <string name="quiz_question2">2.What are the colors in the Indian national flag?</string>
    <string name="quiz_q2_check_a">A) White</string>
    <string name="quiz_q2_check_b">B) Yellow</string>
    <string name="quiz_q2_check_c">C) Orange</string>
    <string name="quiz_q2_check_d">D) Green</string>
    <string name="select_more_than_1">Select more than 1</string>
    <string name="finish">FINISH</string>
    <string name="history">HISTORY</string>
    <string name="menu_history">History</string>
    <string name="uname_q">What is your name?</string>
    <string name="name_missing_error">Please Enter User Name</string>
</resources>
