<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_logo"
    tools:context=".QuizActivity1">

    <android.support.v7.widget.CardView
        style="@style/cardview_style"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            style="@style/cardview_style"
            android:orientation="vertical"
            >
            <TextView
                style="@style/cardview_style"
                android:text="@string/quiz_question1"
                android:textSize="@dimen/quiz_q1_size"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                />
            <RadioGroup
                style="@style/cardview_style"
                android:orientation="vertical"
                android:id="@+id/rg">
                <RadioButton
                    android:id="@+id/rb1"
                    style="@style/cardview_style"
                    android:text="@string/q1_a_option"
                    android:textSize="@dimen/dimens_option_size"
                    />
                <RadioButton
                    android:id="@+id/rb2"
                    style="@style/cardview_style"
                    android:text="@string/q1_b_option"
                    android:textSize="@dimen/dimens_option_size"
                    />
                <RadioButton
                    android:id="@+id/rb3"
                    style="@style/cardview_style"
                    android:text="@string/q1_c_option"
                    android:textSize="@dimen/dimens_option_size"
                    />
                <RadioButton
                    android:id="@+id/rb4"
                    style="@style/cardview_style"
                    android:text="@string/q1_d_option"
                    android:textSize="@dimen/dimens_option_size"
                    />
                <TextView
                    style="@style/cardview_style"
                    android:text="Select any one"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Next"
                android:onClick="next_question"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:layout_margin="20dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>